[gd_scene load_steps=16 format=3 uid="uid://dfc75y8newma4"]

[ext_resource type="Script" path="res://scenes/levels/redraw.gd" id="1_bnpif"]
[ext_resource type="Texture2D" uid="uid://pmav8kfngl0e" path="res://assets/UI/actionButtoncomp1.png" id="2_j7rup"]
[ext_resource type="Texture2D" uid="uid://cmnodo60j0dyq" path="res://assets/UI/actionButtoncomp3.png" id="3_t7ebd"]
[ext_resource type="Texture2D" uid="uid://26t8g2f4g167" path="res://assets/UI/actionButtoncomp4.png" id="4_pbk5w"]
[ext_resource type="Texture2D" uid="uid://cl4iofc66ifqc" path="res://assets/UI/actionButtoncomp2.png" id="5_bpy1u"]
[ext_resource type="Texture2D" uid="uid://db642g6sg1oqn" path="res://assets/UI/actionButtoncomp2lighten.png" id="6_fw13y"]
[ext_resource type="Texture2D" uid="uid://cb5ab5maaw6rg" path="res://assets/UI/ActionButtoncomp2Dark.png" id="7_u58f4"]
[ext_resource type="FontFile" uid="uid://basqqe0aj8rdw" path="res://assets/fonts/VenturisSansADFCd-Bold.otf" id="8_3suda"]
[ext_resource type="FontFile" uid="uid://nswb4qjqs8ld" path="res://assets/fonts/Gupter-Bold.ttf" id="9_rsdan"]
[ext_resource type="FontFile" uid="uid://cdrh8tj0n4lxx" path="res://assets/fonts/ITC Avant Garde Gothic Bold.otf" id="10_2k8ux"]

[sub_resource type="Animation" id="Animation_5ob0j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_1uox3"]
resource_name = "crystalHover"
length = 2.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("redrawButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 1.1, 1.7, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 10), Vector2(0, 10), Vector2(0, 0), Vector2(0, -10), Vector2(0, -10), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_tryet"]
resource_name = "hover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}

[sub_resource type="Animation" id="Animation_hhu1o"]
resource_name = "unhover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_soix6"]
_data = {
"RESET": SubResource("Animation_5ob0j"),
"crystalHover": SubResource("Animation_1uox3"),
"hover": SubResource("Animation_tryet"),
"unhover": SubResource("Animation_hhu1o")
}

[node name="redraw" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 500.0
offset_right = 60.0
offset_bottom = 540.0
pivot_offset = Vector2(103, 103)
mouse_filter = 1
script = ExtResource("1_bnpif")

[node name="component1" type="Sprite2D" parent="."]
position = Vector2(105, 100)
texture = ExtResource("2_j7rup")

[node name="component2" type="Sprite2D" parent="."]
position = Vector2(105, 100)
texture = ExtResource("3_t7ebd")

[node name="component3" type="Sprite2D" parent="."]
position = Vector2(105, 100)
texture = ExtResource("4_pbk5w")

[node name="redrawButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 206.0
offset_bottom = 206.0
texture_normal = ExtResource("5_bpy1u")
texture_pressed = ExtResource("6_fw13y")
texture_hover = ExtResource("6_fw13y")
texture_disabled = ExtResource("7_u58f4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_soix6")
}

[node name="redrawLabel" type="RichTextLabel" parent="."]
light_mask = 2
offset_left = 15.0
offset_top = 75.0
offset_right = 187.0
offset_bottom = 125.0
mouse_filter = 2
theme_override_colors/default_color = Color(0.909804, 0.835294, 0.709804, 1)
theme_override_colors/font_shadow_color = Color(0.909804, 0.835294, 0.709804, 1)
theme_override_colors/font_outline_color = Color(0.360784, 0.317647, 0.223529, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 1
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("8_3suda")
theme_override_fonts/bold_font = ExtResource("9_rsdan")
theme_override_fonts/italics_font = ExtResource("10_2k8ux")
theme_override_font_sizes/normal_font_size = 42
theme_override_font_sizes/bold_font_size = 32
theme_override_font_sizes/italics_font_size = 32
bbcode_enabled = true
text = "[center]Redraw
[/center]"

[connection signal="mouse_entered" from="redrawButton" to="." method="_on_redraw_button_mouse_entered"]
[connection signal="mouse_exited" from="redrawButton" to="." method="_on_redraw_button_mouse_exited"]
